tests/pos/tyvar.hs
module TyVar () where

{-@ foo :: Eq b => a -> b -> a @-}
foo :: Eq b => a -> b -> a
foo = undefined
